# ROS2project

Service_ws/install/: local_setup.sh  setup.sh
Service_ws/install/black_detection_interfaces/share/black_detection_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Service_ws/install/black_detection_service/lib/black_detection_service/: black_detection_client  black_detection_server
Service_ws/install/black_detection_service/share/black_detection_service/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Service_ws/log/: latest_build
Service_ws/src/black_detection_interfaces/: CMakeLists.txt
Service_ws/src/black_detection_interfaces/msg/: BlackObject.msg
Service_ws/src/black_detection_service/: package.xml  setup.cfg  setup.py
TOPIC_PRACTICE_WS/install/: local_setup.sh  setup.sh
TOPIC_PRACTICE_WS/install/status_interfaces/share/status_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
TOPIC_PRACTICE_WS/install/status_publisher/share/status_publisher/: package.sh
TOPIC_PRACTICE_WS/install/status_subscriber/lib/status_subscriber/: sys_status_sub
TOPIC_PRACTICE_WS/log/: latest_build
TOPIC_PRACTICE_WS/src/status_interfaces/: CMakeLists.txt  package.xml
TOPIC_PRACTICE_WS/src/status_publisher/: package.xml  setup.py
TOPIC_PRACTICE_WS/src/status_subscriber/: package.xml  setup.cfg  setup.py
TOPIC_PRACTICE_WS/src/status_subscriber/status_subscriber/: sys_status_sub.py
(+96 files in other folders)
